--- a/share/src/Ors/CMakeLists.txt
+++ b/share/src/Ors/CMakeLists.txt
@@ -1,52 +1,6 @@
 include(CheckIncludeFile)
 include(CheckIncludeFileCXX)
 
-option(WITH_PHYSX "Use NVidia PhysX libraries" OFF)
-set(PHYSX_ROOT $ENV{MLR_LIBPATH} CACHE PATH "Root path for searching PhysX")
-if(WITH_PHYSX)
-  if(PHYSX_ROOT)
-    message(STATUS "PhysX root: ${PHYSX_ROOT}")        
-    set(CMAKE_REQUIRED_INCLUDES ${PHYSX_ROOT}/include ${PHYSX_ROOT}/include/physx)
-    set(CMAKE_REQUIRED_DEFINITIONS -D_DEBUG)
-  else(PHYSX_ROOT)
-    message(STATUS "No PhysX root given")        
-  endif(PHYSX_ROOT)
-        
-  check_include_file_cxx("physx/PxPhysicsAPI.h" PHYSX_H_FOUND)
-
-  if(PHYSX_H_FOUND)
-    add_definitions(-DMT_PHYSX)
-    # check if we already have a debug flag set
-    string(FIND ${CMAKE_BUILD_TYPE} "DEBUG" DEBUG_BUILD)
-    if(NOT DEBUG_BUILD)
-      add_definitions(-D_DEBUG)
-    endif(NOT DEBUG_BUILD)
-    include_directories(${CMAKE_REQUIRED_INCLUDES})
-    link_directories(${PHYSX_ROOT}/lib)
-    set(PHYSX_LIBRARIES  
-        PvdRuntimeCHECKED 
-        SimulationControllerCHECKED
-        SceneQueryCHECKED
-        LowLevelCHECKED
-        LowLevelClothCHECKED
-        PhysX3VehicleCHECKED
-        PhysX3CookingCHECKED
-        PhysX3ExtensionsCHECKED
-        PhysX3CharacterKinematicCHECKED
-        RepX3CHECKED
-        RepXUpgrader3CHECKED
-        PhysXProfileSDKCHECKED
-        PxTaskCHECKED
-        PhysX3        
-        PhysX3CommonCHECKED
-    )
-  else(PHYSX_H_FOUND)
-      message(STATUS "PhysX header not found")
-  endif(PHYSX_H_FOUND)                
-  unset(CMAKE_REQUIRED_INCLUDES)
-  unset(CMAKE_REQUIRED_DEFINITIONS)
-endif(WITH_PHYSX)
-
 # check for ODE
 option(WITH_ODE "Use ODE" OFF)
 set(ODE_ROOT $ENV{MLR_LIBPATH} CACHE PATH "Root path for searching ODE")
@@ -80,8 +34,11 @@ set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 
 include(.sources.cmake)
 
+include_directories(${PHYSX_INCLUDE_DIRS})
+link_directories(${PHYSX_LIBRARY_DIRS})
+add_definitions(${PHSYX_DEFINES})
 add_library(Ors SHARED ${SOURCES})
-target_link_libraries(Ors LINK_PUBLIC ${PHYSX_LIBRARIES} LINK_PRIVATE Algo Core Gui extern_SWIFT ${ODE_LIBRARIES})
+target_link_libraries(Ors LINK_PRIVATE Algo Core Gui extern_SWIFT ${ODE_LIBRARIES} ${PHYSX_LINK} ${PHYSX_LIBRARIES})
 
 # Python wrappers
 if(PYTHON_OK)
