--- a/share/projects/data_recording/g4_data_analysis/CMakeLists.txt
+++ b/share/projects/data_recording/g4_data_analysis/CMakeLists.txt
@@ -11,5 +11,5 @@ get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 include(.sources.cmake)
 
 add_executable(x_${NAME} ${SOURCES})
-target_link_libraries(x_${NAME} Core Ors Gui Perception extern_SWIFT)
+target_link_libraries(x_${NAME} Core Ors Gui Perception extern_SWIFT Algo)
 
