--- a/share/examples/Motion/feedbackControl_joystick/Makefile.gof
+++ b/share/examples/Motion/feedbackControl_joystick/Makefile.gof
@@ -1,6 +1,6 @@
 BASE = ../../..
 
-OBJS = main.o simulator.o joystick2tasks.o
+OBJS = main.o simulator.o
 DEPEND = Core Ors Motion System Gui Hardware
 
 include $(BASE)/gofMake/make-generic
