all examples compile -- except Andrea's g4 data and keyframe stuff

--- a/share/examples/Hardware/g4_module/Makefile.gof
+++ b/share/examples/Hardware/g4_module/Makefile.gof
@@ -2,6 +2,6 @@ BASE = ../../..
 
 OBJS = main.o
 
-DEPEND = Core System Hardware_G4
+DEPEND = Core System Hardware_G4 Gui Ors
 
 include $(BASE)/gofMake/generic.mk
