--- a/share/Makefile.gof
+++ b/share/Makefile.gof
@@ -8,7 +8,8 @@ NAME   = $(shell basename $(PWD))
 
 src_paths =  $(shell find src -mindepth 1 -maxdepth 1 -type d -not -name 'extern' -not -name 'CMakeFiles' -not -name 'retired')
 src_paths += $(shell find src/extern -mindepth 1 -maxdepth 1 -type d -not -name 'CMakeFiles')
-exa_paths = $(shell find examples -mindepth 2 -maxdepth 2 -type d -not -name '*py' -not -name 'CMakeFiles')
+#exa_paths = $(shell find examples -mindepth 2 -maxdepth 2 -type d -not -name '*py' -not -name 'CMakeFiles')
+exa_paths = $(shell find examples -maxdepth 3 -name 'Makefile.gof' | grep -o '.*/')
 pysrc_paths = src/Core src/Ors src/Gui src/Motion src/Optim
 
 ################################################################################
@@ -39,6 +40,7 @@ cleanCmake:
 
 inf:
 	@echo "src_paths =" $(src_paths)
+	@echo "exa_paths =" $(exa_paths)
 
 ################################################################################
 
