--- a/share/src/Hardware/G4/Makefile.gof
+++ b/share/src/Hardware/G4/Makefile.gof
@@ -9,7 +9,7 @@ endif
 CXXFLAGS += -DG4_INSTALLED
 LIBS += -lG4Track -lusb-1.0
 
-DEPEND = Core
+DEPEND = Core Ors Gui
 
 SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
 OBJS = $(SRCS:%.cpp=%.o)
