--- a/share/projects/data_recording/tomsy-recorder/CMakeLists.txt
+++ b/share/projects/data_recording/tomsy-recorder/CMakeLists.txt
@@ -1,5 +1,7 @@
 get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 
+set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
+
 if(LIBFREENECT_FOUND)
 
     include(.sources.cmake)
