--- a/share/projects/pr2_module/CMakeLists.txt
+++ b/share/projects/pr2_module/CMakeLists.txt
@@ -18,7 +18,8 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
 
-include_directories( ${MLR_PATH}/share/src )
+include_directories( ${MLR_PATH}/share/src
+${HOME}/git/mlr/share/projects/tree_controller_pkg/srv_gen/cpp/include )
 
 rosbuild_add_executable(pr2_module src/main.cpp)
 
