older compilers don't know about std=cxx11 but std=c++0x

--- a/share/projects/tcr2/CMakeLists.txt
+++ b/share/projects/tcr2/CMakeLists.txt
@@ -93,7 +93,7 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 # include_directories(include)
-add_definitions("-std=c++11"
+add_definitions("-std=c++0x"
   "-D_DEBUG"
   "-DPX_DISABLE_FLUIDS"
   "-DCORELIB" 
