--- a/share/retired/test/qt/Makefile.gof
+++ b/share/retired/test/qt/Makefile.gof
@@ -1,9 +1,11 @@
-BASE = ../..
+BASE = ../../..
 
 QT = 1
 
 PREOBJS = win_ui.h win_moc.cpp
 OBJS = win_moc.o main.o
+
+DEPEND = Gui
 
 CLEAN = *_moc.cpp *_ui.h MT.log
 
