--- a/share/src/extern/SWIFT_decomposer/CMakeLists.txt
+++ b/share/src/extern/SWIFT_decomposer/CMakeLists.txt
@@ -2,19 +2,22 @@ find_package(TCL)
 
 if(TCL_FOUND)
 
-get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
+    get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 
-include(.sources.cmake)
-set(SOURCES ${SOURCES} RAPID/build.cpp RAPID/collide.cpp RAPID/overlap.cpp
-        RAPID/RAPID.cpp)
+    include(.sources.cmake)
+    set(SOURCES ${SOURCES} RAPID/build.cpp RAPID/collide.cpp RAPID/overlap.cpp
+            RAPID/RAPID.cpp)
 
-add_library(extern_${NAME} STATIC ${SOURCES})
-set_target_properties(extern_${NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)
+    add_library(extern_${NAME} STATIC ${SOURCES})
+    set_target_properties(extern_${NAME}
+        PROPERTIES
+        POSITION_INDEPENDENT_CODE ON
+        COMPILE_FLAGS "-Wno-write-strings") # suppress warnings because of old-style char* assignments
 
-add_definitions(-DDECOMP_GRAPHICS -DSWIFT_DECOMP)
-include_directories(. RAPID ${TCL_INCLUDE_PATH} ${TK_INCLUDE_PATH})
-target_link_libraries(extern_${NAME} ${TCL_LIBRARY} ${TK_LIBRARY} ${GL_LIBRARIES})
+    add_definitions(-DDECOMP_GRAPHICS -DSWIFT_DECOMP)
+    include_directories(. RAPID ${TCL_INCLUDE_PATH} ${TK_INCLUDE_PATH})
+    target_link_libraries(extern_${NAME} ${TCL_LIBRARY} ${TK_LIBRARY} ${GL_LIBRARIES})
 
-#add_executable(decomposer.exe main.cxx)
+    #add_executable(decomposer.exe main.cxx)
 endif(TCL_FOUND)
 
