skip unit-tests when testing is not enabled

--- a/share/unittest/CMakeLists.txt
+++ b/share/unittest/CMakeLists.txt
@@ -1,9 +1,11 @@
 set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 
-# select what to compile
-include(.slicedef.cmake)
+if(TESTING_ENABLED)
+	# select what to compile
+	include(.slicedef.cmake)
 
-foreach(DIR ${CURRENT_SLICE})
-add_subdirectory(${DIR})
-endforeach(DIR ${CURRENT_SLICE})
+	foreach(DIR ${CURRENT_SLICE})
+	add_subdirectory(${DIR})
+	endforeach(DIR ${CURRENT_SLICE})
+endif()
 
