add a macro such that examples are only run as tests when the build is configured for that

--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -42,23 +42,29 @@ endif(WITH_OPENCV)
 # allow users to switch off compilation of unit-tests
 option(WITH_GTEST "Should we run unit-tests (default yes)" ON)
 if(WITH_GTEST)
-  option(EXAMPLES_AS_TESTS "Should examples be used as tests? (default yes)" OFF)
-        include(CheckIncludeFileCXX)
-        check_include_file_cxx("gtest/gtest.h" GTEST_H_FOUND)
-        if(GTEST_H_FOUND)
-                enable_testing()
-                add_subdirectory(/usr/src/gtest gtest)
-                link_directories(gtest)
-                if(EXAMPLES_AS_TESTS)
-                  add_definitions(-DMLR_EXAMPLES_AS_TESTS)
-                endif(EXAMPLES_AS_TESTS)
-        else(GTEST_H_FOUND)
-                        message(WARNING "Did not find gtest.h, cannot enable testing")
-                set(TESTING_ENABLED)
-        endif(GTEST_H_FOUND)
+    option(EXAMPLES_AS_TESTS "Should examples be used as tests? (default yes)" OFF)
+    include(CheckIncludeFileCXX)
+    check_include_file_cxx("gtest/gtest.h" GTEST_H_FOUND)
+    if(GTEST_H_FOUND)
+        enable_testing()
+        add_subdirectory(/usr/src/gtest gtest)
+        link_directories(gtest)
+        if(EXAMPLES_AS_TESTS)
+          add_definitions(-DMLR_EXAMPLES_AS_TESTS)
+        endif(EXAMPLES_AS_TESTS)
+        set(TESTING_ENABLED ON)
+    else(GTEST_H_FOUND)
+        message(WARNING "Did not find gtest.h, cannot enable testing")
+        set(TESTING_ENABLED)
+    endif(GTEST_H_FOUND)
 else(WITH_GTEST)
 	set(EXAMPLES_AS_TESTS OFF)
 endif(WITH_GTEST)
+macro(mlr_example_test NAME)
+if(TESTING_ENABLED AND EXAMPLES_AS_TESTS)
+	add_test(x_${NAME}_test ${NAME} --gtest-output=xml:${NAME}-unit-xml)
+endif()
+endmacro()
 
 # configure Python
 option(WITH_PYTHON "Build python bindings using SWIG. Will be omitted of swig or NumPy are not found" ON)
