--- a/share/examples/Hardware/g4_player/CMakeLists.txt
+++ b/share/examples/Hardware/g4_player/CMakeLists.txt
@@ -9,6 +9,6 @@ add_executable(x_${NAME} ${SOURCES})
 
 target_link_libraries(x_${NAME} Core Ors Hardware_G4 Gui Perception)
 
-add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
+mlr_example_test(${NAME})
 
 endif(G4TRACK)
