--- a/share/examples/Perception/videoEncoder/CMakeLists.txt
+++ b/share/examples/Perception/videoEncoder/CMakeLists.txt
@@ -8,5 +8,5 @@ if(HAVE_OPENGL)
 
   target_link_libraries(x_${NAME} Ors Gui Core Perception)
 
-  add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
+  mlr_example_test(${NAME})
 endif(HAVE_OPENGL)
