--- a/share/examples/Perception/vision-opencvRaw/CMakeLists.txt
+++ b/share/examples/Perception/vision-opencvRaw/CMakeLists.txt
@@ -10,5 +10,5 @@ add_executable(x_${NAME} ${SOURCES})
 
 target_link_libraries(x_${NAME} Ors Gui Core Perception ${OPENCV_LIBRARIES})
 
-add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
+mlr_example_test(${NAME})
 endif(OPENCV_FOUND)
