--- a/share/examples/Algo/splines/CMakeLists.txt
+++ b/share/examples/Algo/splines/CMakeLists.txt
@@ -7,4 +7,4 @@ add_executable(x_${NAME} ${SOURCES})
 
 target_link_libraries(x_${NAME} Core Algo Gui)
 
-add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
+mlr_example_test(${NAME})
