--- a/share/examples/Core/geo/CMakeLists.txt
+++ b/share/examples/Core/geo/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(x_${NAME} ${SOURCES})
 
 target_link_libraries(x_${NAME} Core)
 
-add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
+mlr_example_test(${NAME})
