--- a/share/examples/Gui/mesh_implicitSurface/CMakeLists.txt
+++ b/share/examples/Gui/mesh_implicitSurface/CMakeLists.txt
@@ -6,5 +6,5 @@ add_executable(x_${NAME} ${SOURCES})
 
 target_link_libraries(x_${NAME} Core Gui)
 
-add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
+mlr_example_test(${NAME})
 
