--- a/share/examples/Gui/opengl_threaded/CMakeLists.txt
+++ b/share/examples/Gui/opengl_threaded/CMakeLists.txt
@@ -7,5 +7,5 @@ add_executable(x_${NAME} ${SOURCES})
 target_link_libraries(x_${NAME} Core Gui ${GL_LIBRARIES})
 add_definitions(-DMT_GL)
 
-add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
+mlr_example_test(${NAME})
 
