--- a/share/examples/Hardware/g4_raw/CMakeLists.txt
+++ b/share/examples/Hardware/g4_raw/CMakeLists.txt
@@ -10,6 +10,6 @@ add_executable(x_${NAME} ${SOURCES})
 
 target_link_libraries(x_${NAME} Hardware_G4)
 
-add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
+mlr_example_test(${NAME})
 
 endif(G4TRACK)
