--- a/share/examples/Motion/dynamicMovementPrimtives/CMakeLists.txt
+++ b/share/examples/Motion/dynamicMovementPrimtives/CMakeLists.txt
@@ -5,5 +5,5 @@ add_executable(x_${NAME} ${SOURCES})
 
 target_link_libraries(x_${NAME} Motion Optim Gui Ors Algo)
 
-add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
+mlr_example_test(${NAME})
 
