--- a/share/examples/Ors/ors_physx/CMakeLists.txt
+++ b/share/examples/Ors/ors_physx/CMakeLists.txt
@@ -5,5 +5,5 @@ add_executable(x_${NAME} ${SOURCES})
 
 target_link_libraries(x_${NAME} Ors Core Gui)
 
-add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
+mlr_example_test(${NAME})
 file(COPY pin1.off DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
