--- a/share/examples/relational/relational_learn/CMakeLists.txt
+++ b/share/examples/relational/relational_learn/CMakeLists.txt
@@ -5,5 +5,5 @@ add_executable(x_${NAME} ${SOURCES})
 
 target_link_libraries(x_${NAME} LINK_PRIVATE relational Core)
 
-add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
+mlr_example_test(${NAME})
 
