--- a/share/teaching/RoboticsCourse/04-rrt/CMakeLists.txt
+++ b/share/teaching/RoboticsCourse/04-rrt/CMakeLists.txt
@@ -3,5 +3,5 @@ include(.sources.cmake)
 
 add_executable(${NAME} ${SOURCES})
 target_link_libraries(${NAME} Core Ors Algo Gui Optim)
-add_test(${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
+mlr_example_test(${NAME})
 
