--- a/share/teaching/RoboticsCourse/09-racer/CMakeLists.txt
+++ b/share/teaching/RoboticsCourse/09-racer/CMakeLists.txt
@@ -3,5 +3,5 @@ if(HAVE_OPENGL)
   include(.sources.cmake)
   add_executable(${NAME} ${SOURCES})
   target_link_libraries(${NAME} Core Ors Gui Algo Motion Algo Core Core Gui Hardware_racer ${GL_LIBRARIES})
-  add_test(${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
+  mlr_example_test(${NAME})
 endif(HAVE_OPENGL)
