--- a/share/teaching/RoboticsCourse/roboticsCourse6/CMakeLists.txt
+++ b/share/teaching/RoboticsCourse/roboticsCourse6/CMakeLists.txt
@@ -2,4 +2,4 @@ get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 include(.sources.cmake)
 add_executable(${NAME} ${SOURCES})
 target_link_libraries(${NAME} Core Ors )
-add_test(${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
+mlr_example_test(${NAME})
