--- a/share/src/Ors/Makefile.gof
+++ b/share/src/Ors/Makefile.gof
@@ -6,6 +6,7 @@ GL = 1
 PHYSX = 1
 ODE = 1
 DEPEND = Core Algo Gui extern_SWIFT
+CXXFLAGS += -Wno-unknown-pragmas -Wno-unused-local-typedefs
 
 SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
 OBJS = $(SRCS:%.cpp=%.o)
