add synchronous capture methods for kinect

--- a/share/src/Hardware/kinect/CMakeLists.txt
+++ b/share/src/Hardware/kinect/CMakeLists.txt
@@ -14,7 +14,7 @@ if(LIBFREENECT_FOUND)
 
 	add_library(${TARGET} SHARED ${SOURCES})
 	target_link_libraries(${TARGET}
-		LINK_PRIVATE Core ${LIBFREENECT_LIBRARIES})
+		LINK_PRIVATE Core ${LIBFREENECT_LIBRARIES} -lfreenect_sync)
 
 
 else(LIBFREENECT_FOUND)
