--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -9,6 +9,9 @@ if(CMAKE_BUILD_TYPE STREQUAL "")
   set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -DNDEBUG" CACHE STRING "Default flags including -DNDEBUG" FORCE)
 endif(CMAKE_BUILD_TYPE STREQUAL "")
 
+# always warn
+set(CMAKE_CXX_FLAGS "-Wall ${CMAKE_CXX_FLAGS}")
+
 # path for find macros
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
 
