--- a/share/teaching/AutonomousSystems/e08-OpenCV/CMakeLists.txt
+++ b/share/teaching/AutonomousSystems/e08-OpenCV/CMakeLists.txt
@@ -1,9 +1,11 @@
 get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 
-set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
+if(OPENCV_FOUND)
+	set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 
-add_executable(${NAME} main.cpp)
+	add_executable(${NAME} main.cpp)
 
-target_link_libraries(${NAME} opencv_core opencv_imgproc opencv_highgui opencv_features2d)
+	target_link_libraries(${NAME} opencv_core opencv_imgproc opencv_highgui opencv_features2d)
 
-mlr_example_test(${NAME})
+	mlr_example_test(${NAME})
+endif(OPENCV_FOUND)
