unset rosbuild to remove previous ros configuration, if any

--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -109,8 +109,11 @@ if(WITH_ROS)
   if(ROSBUILD)
     message(STATUS "rosbuild found at ${ROSBUILD}")
   else(ROSBUILD)
+    unset(ROSBUILD CACHE)
     message(STATUS "rosbuild not found, not compiling anything that requires it")
   endif(ROSBUILD)
+else(WITH_ROS)
+  unset(ROSBUILD CACHE)
 endif(WITH_ROS)
 
 #find_package(DOXYGEN)
