--- a/share/examples/Ors/ors_editor/MT.cfg
+++ b/share/examples/Ors/ors_editor/MT.cfg
@@ -1,3 +1,4 @@
+file = window.ors
 file = pr2_model/pr2-1-org.ors
 file = pr2_model/pr2_clean_comfi.ors
 file = data/apollo_robot_model/models/zzz.ors
