working on direct and indirect distance meastures

--- a/share/projects/data_recording/controllability/MT.cfg
+++ b/share/projects/data_recording/controllability/MT.cfg
@@ -1,4 +1,4 @@
-data = ./g4Data.dat
-meta = ./g4Meta.dat
-poses = ./g4Poses.dat
-shapes = ./g4Shapes.ors
+data = g4Data.dat
+meta = g4Meta.dat
+poses = g4Poses.dat
+shapes = g4Shapes.ors
