--- a/share/examples/Optim/constrained/MT.cfg
+++ b/share/examples/Optim/constrained/MT.cfg
@@ -2,6 +2,11 @@
 fctChoice = 1
 condition = 1
 
+# enum WhichConstraint { wedge2D=1, halfcircle2D, randomLinear } which;
+constraintChoice = 3
+
+dim=3
+
 SinusesFunction_a = 5
 
 #enum TestType { unconstrained=1, constrained, phaseOne, gaussNewton };
