--- a/usr/PE/14_imitationLearning/draft1/Makefile.gof
+++ b/usr/PE/14_imitationLearning/draft1/Makefile.gof
@@ -1,6 +1,7 @@
 BASE = ../../../../share/
 
 GL = 1
-DEPEND = Motion Core Ors Gui Optim Algo
-
+DEPEND = Core Motion Ors Gui Optim Algo
+PTHREAD = 1
 include $(BASE)/gofMake/generic.mk
+
