disable the generation of srv files in marc_controller_pkg
marc_controller_pkg does not use srv files.

--- a/share/src/pr2/marc_controller_pkg/CMakeLists.txt
+++ b/share/src/pr2/marc_controller_pkg/CMakeLists.txt
@@ -27,5 +27,5 @@ ${MLR_PATH}/share/lib/libMotion.so
 ${MLR_PATH}/share/lib/libOrs.so
 ${MLR_PATH}/share/lib/libCore.so)
 
-rosbuild_gensrv()
 rosbuild_genmsg()
+# rosbuild_gensrv()
