calc_fwdPropagateFrames removed when redundant!

--- a/share/examples/Motion/motion/MT.cfg
+++ b/share/examples/Motion/motion/MT.cfg
@@ -1,8 +1,9 @@
+orsFile = model.kvg
 
 transitionType = 1
 Hrate = 1e-0
 timeSteps = 100
-duration = 5.
+duration = 3.
 
 orsFile = test.ors
 orsFile = arm3.ors
