--- a/share/examples/Ors/ors_editor/MT.cfg
+++ b/share/examples/Ors/ors_editor/MT.cfg
@@ -1,3 +1,4 @@
+file = ../../Motion/blocks/blocks.kvg
 file = model.kvg
 file = ../../../data/pr2_model/pr2-3-comfi.ors
 file = pr2_model/pr2_clean_comfi.ors
