--- a/share/examples/Ors/ors_editor/MT.cfg
+++ b/share/examples/Ors/ors_editor/MT.cfg
@@ -1,6 +1,6 @@
+file = ../../../data/pr2_model/z1-raw.ors
 file = ../../Motion/blocks/blocks.kvg
 file = model.kvg
-file = ../../../data/pr2_model/pr2-3-comfi.ors
 file = pr2_model/pr2_clean_comfi.ors
 file = data/apollo_robot_model/models/zzz.ors
 file = pr2_model/pr2.urdf.ors
