--- a/share/examples/Ors/ors_editor/MT.cfg
+++ b/share/examples/Ors/ors_editor/MT.cfg
@@ -1,3 +1,4 @@
+file = ../../../data/pr2_model/pr2_clean.ors
 file = ../../../data/pr2_model/z1-raw.ors
 file = ../../Motion/blocks/blocks.kvg
 file = model.kvg
