--- a/share/examples/Optim/constrained/MT.cfg
+++ b/share/examples/Optim/constrained/MT.cfg
@@ -3,14 +3,14 @@ fctChoice = 1
 condition = 1
 
 # enum WhichConstraint { wedge2D=1, halfcircle2D, randomLinear } which;
-constraintChoice = 2
+constraintChoice = 3
 
-dim=2
+dim=300
 
 SinusesFunction_a = 5
 
 #enum TestType { unconstrained=1, constrained, phaseOne, gaussNewton };
 exercise = 2
 
-#  enum MethodType { squaredPenalty=1, augmentedLag, logBarrier };
-method = 2
+#  enum MethodType { squaredPenalty=1, augmentedLag, logBarrier, anyTimeAula };
+method = 4
