--- a/share/Makefile.gof
+++ b/share/Makefile.gof
@@ -58,10 +58,10 @@ reformatSources:
 	rm -f $*.tgz;
 	cd ..; \
 	tar cvzf $*.tgz --exclude-vcs \
-	--files-from $(PWD)/slices/tar.incl \
-	--files-from $(PWD)/slices/$*.tar.incl \
-	--exclude-from $(PWD)/slices/tar.excl \
-	--exclude-from $(PWD)/slices/$*.tar.excl
+	--files-from $(PWD)/slices/default.incl \
+	--files-from $(PWD)/slices/$*.incl \
+	--exclude-from $(PWD)/slices/default.excl \
+	--exclude-from $(PWD)/slices/$*.excl
 	cp -f gofMake/config.mk.mine gofMake/config.mk
 
 makePath/%: %
