--- a/share/src/Optim/Makefile.gof
+++ b/share/src/Optim/Makefile.gof
@@ -4,7 +4,8 @@ OUTPUT := $(BASE)/lib/$(NAME).so
 
 DEPEND = Core
 
-SRCS = $(shell find . -maxdepth 1 -name '*.cpp')
-OBJS = $(SRCS:%.cpp=%.o) cmaes.o
+SRC_CPP = $(shell find . -maxdepth 1 -name '*.cpp')
+SRC_C   = $(shell find . -maxdepth 1 -name '*.c')
+OBJS = $(SRC_CPP:%.cpp=%.o) $(SRC_C:%.c=%.o)
 
 include $(BASE)/gofMake/generic.mk
