--- a/share/examples/Optim/constrained/MT.cfg
+++ b/share/examples/Optim/constrained/MT.cfg
@@ -5,7 +5,7 @@ condition = 1
 # enum WhichConstraint { wedge2D=1, halfcircle2D, randomLinear } which;
 constraintChoice = 3
 
-dim=100
+dim=200
 
 SinusesFunction_a = 5
 
@@ -13,4 +13,15 @@ SinusesFunction_a = 5
 exercise = 2
 
 #  enum MethodType { squaredPenalty=1, augmentedLag, logBarrier, anyTimeAula };
-method = 4
+opt/constrainedMethod = 4
+
+        opt/verbose = 1
+   opt/stopTolerance =  1e-4
+         opt/damping =  1.001
+         opt/stepInc =  1.2
+         opt/stepDec =  0.5
+      opt/dampingInc =  1.
+      opt/dampingDec =  1.
+  opt/nonStrictSteps =  0
+
+/opt/optConstrained/anyTimeAulaStopTolInc = 10.
