--- a/share/examples/Optim/kOrderMarkov/MT.cfg
+++ b/share/examples/Optim/kOrderMarkov/MT.cfg
@@ -1,2 +1,11 @@
-method = 4
-order = 2
+opt/ParticleAroundWalls/T = 1000
+opt/ParticleAroundWalls/k = 2
+opt/ParticleAroundWalls/hardConstrained = 1
+
+opt/constrainedMethod = 4
+opt/verbose=2
+opt/damping=1e-6
+opt/dampingDec=.1
+opt/dampingInc=2.
+opt/stepDec=.1
+opt/stepInc=2.
