--- a/share/examples/Algo/ML-regression/MT.cfg
+++ b/share/examples/Algo/ML-regression/MT.cfg
@@ -1,7 +1,7 @@
-mode = 2
+mode = 6
 
-n = 10
-d = 1
+n = 100
+d = 2
 dataType = 1
 dataFeatureType = 1
 sigma = .1
@@ -11,5 +11,7 @@ outlierSigma = 10.
 
 modelFeatureType = 4
 rbfBias = 0
-rbfWidth = .2
-lambda = 1e-1 10
+rbfWidth = .14
+lambda = 1e-2 10
+
+ML/KernelWidth = .2
