--- a/share/src/pr2/Makefile.gof
+++ b/share/src/pr2/Makefile.gof
@@ -7,7 +7,7 @@ DEPEND = Core System Hardware Hardware_joystick Motion Ors Gui System
 
 #CXXFLAGS += -DROS_PACKAGE_NAME='"pr2_module"'
 
-CPATHS += $(BASE)/projects/marc_controller_pkg/msg_gen/cpp/include $(BASE)/projects/marc_controller_pkg/srv_gen/cpp/include
+CPATHS += $(BASE)/projects/marc_controller_pkg/msg_gen/cpp/include
 
 SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
 OBJS = $(SRCS:%.cpp=%.o)
