cmake files with x_

--- a/share/teaching/RoboticsCourse/04-rrt/CMakeLists.txt
+++ b/share/teaching/RoboticsCourse/04-rrt/CMakeLists.txt
@@ -1,7 +1,7 @@
 get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 include(.sources.cmake)
 
-add_executable(${NAME} ${SOURCES})
-target_link_libraries(${NAME} Core Ors Algo Gui Optim)
+add_executable(x_${NAME} ${SOURCES})
+target_link_libraries(x_${NAME} Core Ors Algo Gui Optim)
 mlr_example_test(${NAME})
 
