--- a/share/teaching/RoboticsCourse/09-racer/CMakeLists.txt
+++ b/share/teaching/RoboticsCourse/09-racer/CMakeLists.txt
@@ -1,7 +1,7 @@
 get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 if(HAVE_OPENGL)
   include(.sources.cmake)
-  add_executable(${NAME} ${SOURCES})
-  target_link_libraries(${NAME} Core Ors Gui Algo Motion Algo Core Core Gui Hardware_racer ${GL_LIBRARIES})
+  add_executable(x_${NAME} ${SOURCES})
+  target_link_libraries(x_${NAME} Core Ors Gui Algo Motion Algo Core Core Gui Hardware_racer ${GL_LIBRARIES})
   mlr_example_test(${NAME})
 endif(HAVE_OPENGL)
