--- a/share/unittest/Algo/ANN/CMakeLists.txt
+++ b/share/unittest/Algo/ANN/CMakeLists.txt
@@ -1,5 +1,5 @@
 get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 include(.sources.cmake)
-add_executable(${NAME} ${SOURCES})
-target_link_libraries(${NAME} Core Algo Core )
+add_executable(x_${NAME} ${SOURCES})
+target_link_libraries(x_${NAME} Core Algo Core )
 add_test(${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
