--- a/share/Makefile.gof
+++ b/share/Makefile.gof
@@ -46,11 +46,11 @@ tests:
 	@rm -f z.test-report
 	@find examples -mindepth 2 -maxdepth 2 -type d \
 		-not -name '*py' -not -name 'CMakeFiles'\
-		-exec $(BASE)/gofMake/make-path.sh {} z.test.a \;
+		-exec gofMake/run-path.sh {} \;
 
-#	@find examples -mindepth 2 -maxdepth 2 -type d \
-#		-not -name '*py' -not -name 'CMakeFiles'\
-#		-exec gofMake/run-path.sh {} \;
+	# @find examples -mindepth 2 -maxdepth 2 -type d \
+	# 	-not -name '*py' -not -name 'CMakeFiles'\
+	# 	-exec $(BASE)/gofMake/make-path.sh {} z.test.a \;
 
 ################################################################################
 
