many tests run, but not all: obj files...

--- a/share/unittest/Examples/Makefile.gof
+++ b/share/unittest/Examples/Makefile.gof
@@ -1,7 +1,7 @@
 BASE = ../..
 
-LIBS += -lgtest
-_LIBS = $(shell find $(BASE)/examples -mindepth 3 -maxdepth 3 -name 'z.test.a' )
+LIBS += -Wl,--no-as-needed -lgtest
+_LIBS = $(shell find $(BASE)/examples -mindepth 3 -maxdepth 3 -name 'lib_test.so' )
 LIBS += $(_LIBS:%=-l:%)
 
 include $(BASE)/gofMake/generic.mk
