--- a/share/Makefile.gof
+++ b/share/Makefile.gof
@@ -48,9 +48,10 @@ tests:
 		-not -name '*py' -not -name 'CMakeFiles'\
 		-exec gofMake/run-path.sh {} \;
 
-# @find examples -mindepth 2 -maxdepth 2 -type d \
-# 	-not -name '*py' -not -name 'CMakeFiles'\
-# 	-exec $(BASE)/gofMake/make-path.sh {} z.test.a \;
+#testLibs:
+#	@find examples -mindepth 2 -maxdepth 2 -type d \
+# 	      -not -name '*py' -not -name 'CMakeFiles'\
+#	      -exec $(BASE)/gofMake/make-path.sh {} lib_test.so \;
 
 ################################################################################
 
