--- a/share/src/relational/Makefile.gof
+++ b/share/src/relational/Makefile.gof
@@ -2,7 +2,12 @@ BASE   = ../..
 NAME   = lib$(shell basename `pwd`)
 OUTPUT := $(BASE)/lib/$(NAME).so
 
+include $(BASE)/gofMake/config.mk
+ifeq ($(PURE_RELATIONAL),1)
+DEPEND = Core
+else
 DEPEND = Core Ors Gui Motion
+endif
 
 SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
 OBJS = $(SRCS:%.cpp=%.o)
