--- a/share/projects/data_recording/controllability/MT.cfg
+++ b/share/projects/data_recording/controllability/MT.cfg
@@ -1,4 +1,11 @@
-data = g4Data.dat
-meta = g4Meta.dat
-poses = g4Poses.dat
-shapes = g4Shapes.ors
+# data = blabla
+# meta = g4Meta.sm.dat
+# poses = g4Poses.sm.dat
+train = g4Poses.simple.train.dat
+test = g4Poses.simple.test.dat
+# shapes = g4Shapes.sm.ors
+
+meta = g4Meta.sm.dat
+poses = g4Poses.sm.dat
+world = world.sm.ors
+mode = 0
