add fps computation to flycap example

--- a/share/examples/Hardware/flycap/CMakeLists.txt
+++ b/share/examples/Hardware/flycap/CMakeLists.txt
@@ -8,7 +8,7 @@ if(FLYCAPTURE_LIBRARY)
 	add_executable(x_${NAME} ${SOURCES})
 	add_executable(flycap_serials flycap_serials.cpp)
 	
-	target_link_libraries(x_${NAME} Hardware_flycap Gui)
+	target_link_libraries(x_${NAME} Hardware_flycap Gui Core)
 	target_link_libraries(flycap_serials Hardware_flycap)
 	
 	mlr_example_test(${NAME})
