--- a/share/examples/Ors/ors_editor/MT.cfg
+++ b/share/examples/Ors/ors_editor/MT.cfg
@@ -1,3 +1,4 @@
+file = kinematicTests.kvg
 file = ../../../../usr/MT/seqManip/model.kvg
 f ile = window.ors
 file = ../../../data/pr2_model/pr2_clean.ors
