--- a/share/projects/13-dualExecution/belief_dynamics/MT.cfg
+++ b/share/projects/13-dualExecution/belief_dynamics/MT.cfg
@@ -5,3 +5,14 @@ stickyPrec =  .01
 beliefDynPrec = 100.;
 beliefGoalPrec = 1.;
 posGoalPrec = 10.;
+
+opt/ParticleAroundWalls/T = 100
+opt/ParticleAroundWalls/hardConstrained = 0
+
+opt/constrainedMethod = 4
+opt/verbose=2
+opt/damping=1e-6
+opt/dampingDec=.1
+opt/dampingInc=2.
+opt/stepDec=.1
+opt/stepInc=2.
