display captured images

--- a/share/projects/data_recording/3rdhand-recorder/CMakeLists.txt
+++ b/share/projects/data_recording/3rdhand-recorder/CMakeLists.txt
@@ -7,6 +7,6 @@ if(LIBFREENECT_FOUND AND FLYCAPTURE_LIBRARY)
     include(.sources.cmake)
     add_executable(x_${NAME} ${SOURCES})
 
-    target_link_libraries(x_${NAME} Core Perception Hardware_kinect Hardware_flycap)
+    target_link_libraries(x_${NAME} Core Perception Gui Hardware_kinect Hardware_flycap)
 
 endif()
