--- a/share/unittest/Perception/libav/CMakeLists.txt
+++ b/share/unittest/Perception/libav/CMakeLists.txt
@@ -4,5 +4,5 @@ if(LIBAV_AVFORMAT_LIBRARY)
     include(.sources.cmake)
     add_executable(x_${NAME} ${SOURCES})
     target_link_libraries(x_${NAME} Core Perception)
-    add_test(${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
+    add_test(${NAME}_test x_${NAME} --gtest_output=xml:${NAME}-unit.xml)
 endif()
