only build Kinect if found AND enabled

--- a/share/src/Hardware/kinect/CMakeLists.txt
+++ b/share/src/Hardware/kinect/CMakeLists.txt
@@ -3,6 +3,7 @@ get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 
 set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 
+if(WITH_FREENECT)
 if(LIBFREENECT_FOUND)
 	include(.sources.cmake)
 
@@ -17,7 +18,7 @@ if(LIBFREENECT_FOUND)
 		LINK_PRIVATE Core ${LIBFREENECT_LIBRARIES} -lfreenect_sync)
 
 
-else(LIBFREENECT_FOUND)
+else()
 	message(STATUS "Kinect support not built because libfreenect not found")
-endif(LIBFREENECT_FOUND)
-
+endif()
+endif(WITH_FREENECT) 
