--- a/share/projects/data_recording/controllability/MT.cfg
+++ b/share/projects/data_recording/controllability/MT.cfg
@@ -1,11 +1,9 @@
-# data = blabla
-# meta = g4Meta.sm.dat
-# poses = g4Poses.sm.dat
-train = g4Poses.simple.train.dat
-test = g4Poses.simple.test.dat
-# shapes = g4Shapes.sm.ors
-
-meta = g4Meta.sm.dat
-poses = g4Poses.sm.dat
-world = world.sm.ors
 mode = 0
+
+# data = /home/bais/mlr_misc/data/mocaplab/segments/
+# segment = seg_stack_move_1/
+
+basedir = /home/bais/mlr_misc/data/mocaplab/segments/
+segdir = seg_stack_move_1/
+traindirlist = seg_stack_move_1/
+
