--- a/share/projects/data_recording/controllability/CMakeLists.txt
+++ b/share/projects/data_recording/controllability/CMakeLists.txt
@@ -24,6 +24,7 @@ endif()
 set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 
 include(.sources.cmake)
+include_directories(/home/bais/extern/dlib-18.8/)
 
 add_executable(x_${NAME} ${SOURCES})
 target_link_libraries(x_${NAME} Core Ors Gui Perception extern_SWIFT Algo)
