--- a/share/examples/Hardware/kinect/CMakeLists.txt
+++ b/share/examples/Hardware/kinect/CMakeLists.txt
@@ -2,6 +2,7 @@ get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 
 set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 
+if(WITH_FREENECT)
 if(LIBFREENECT_FOUND)
 
 	include(.sources.cmake)
@@ -12,3 +13,4 @@ if(LIBFREENECT_FOUND)
 	mlr_example_test(${NAME})
 
 endif()	
+endif(WITH_FREENECT)
