GradIOC, optimization working

--- a/usr/PE/14_imitationLearning/1_GradIOC/Makefile.gof
+++ b/usr/PE/14_imitationLearning/1_GradIOC/Makefile.gof
@@ -2,9 +2,6 @@ BASE = ../../../../share
 
 OBJS = main.o
 DEPEND = Core Motion Gui Optim Algo Ors
-GL = 1
-PHYSX = 0
-PTHREAD = 0
-CXXFLAGS += -fPIC
+PTHREAD = 1
 
-include $(BASE)/gofMake/make-generic
+include $(BASE)/gofMake/generic.mk
