--- a/share/projects/pcl_sprint/CMakeLists.txt
+++ b/share/projects/pcl_sprint/CMakeLists.txt
@@ -1,14 +1,14 @@
 set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 
-find_package(PCL 1.3 REQUIRED COMPONENTS common io visualization)
-include_directories(${PCL_INCLUDE_DIRS})
-link_directories(${PCL_LIBRARY_DIRS})
-add_definitions(${PCL_DEFINITIONS})
+find_package(PCL 1.3 COMPONENTS common io visualization)
+if(PCL_FOUND)
+    include_directories(${PCL_INCLUDE_DIRS})
+    link_directories(${PCL_LIBRARY_DIRS})
+    add_definitions(${PCL_DEFINITIONS})
 
-add_library(mlr_pcl grab.cpp plane.cpp)
-target_link_libraries(mlr_pcl LINK_PRIVATE ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} ${PCL_VISUALIZATION_LIBRARIES})
+    add_library(mlr_pcl grab.cpp plane.cpp)
+    target_link_libraries(mlr_pcl LINK_PRIVATE ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} ${PCL_VISUALIZATION_LIBRARIES})
 
-add_executable(pcl_p_test main.cpp)
-target_link_libraries(pcl_p_test mlr_pcl)
-
-
+    add_executable(pcl_p_test main.cpp)
+    target_link_libraries(pcl_p_test mlr_pcl)
+endif()
