--- a/share/projects/pcl_sprint/CMakeLists.txt
+++ b/share/projects/pcl_sprint/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
+set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS} -std=c++0x")
 
 find_package(PCL 1.3 COMPONENTS common io visualization)
 if(PCL_FOUND)
@@ -12,3 +12,6 @@ if(PCL_FOUND)
     add_executable(pcl_p_test main.cpp)
     target_link_libraries(pcl_p_test mlr_pcl)
 endif()
+
+add_executable(viewer viewer.cpp)
+target_link_libraries(viewer ${PCL_LIBRARIES})
