--- a/share/projects/pcl_sprint/CMakeLists.txt
+++ b/share/projects/pcl_sprint/CMakeLists.txt
@@ -32,7 +32,9 @@ if(PCL_FOUND)
 
     add_executable(pcl_p_test main.cpp)
     target_link_libraries(pcl_p_test mlr_pcl)
+
+    add_executable(viewer viewer.cpp test_method.cpp)
+    target_link_libraries(viewer ${PCL_LIBRARIES})
 endif()
 
-add_executable(viewer viewer.cpp)
-target_link_libraries(viewer ${PCL_LIBRARIES})
+
