--- a/share/src/Gui/CMakeLists.txt
+++ b/share/src/Gui/CMakeLists.txt
@@ -59,6 +59,7 @@ target_link_libraries(Gui LINK_PRIVATE Core
         ${QHULL_LIBRARIES}
         LINK_PUBLIC
         ${GL_LIBRARIES}
+	GLEW
 )
 
 # Python wrappers
