add some cmake stuff

--- a/share/projects/CMakeLists.txt
+++ b/share/projects/CMakeLists.txt
@@ -5,4 +5,5 @@
 add_subdirectory(data_recording)
 add_subdirectory(pcl_sprint)
 add_subdirectory(pcl_sprint_module)
+add_subdirectory(pr2_sensors)
 
