pr2->kinect->modules->pcl workds

--- a/share/src/Hardware/kinect/Makefile.gof
+++ b/share/src/Hardware/kinect/Makefile.gof
@@ -2,7 +2,7 @@ BASE   = ../../..
 NAME   = libHardware_$(shell basename `pwd`)
 OUTPUT := $(BASE)/lib/$(NAME).so
 
-CXXFLAGS += -I/usr/local/include/libfreenect
+CXXFLAGS += -I/usr/local/include/libfreenect -I/usr/include/libusb-1.0
 LIBS += -lfreenect
 DEPEND = Core
 
