--- a/share/projects/pcl_sprint_module/Makefile.gof
+++ b/share/projects/pcl_sprint_module/Makefile.gof
@@ -3,7 +3,8 @@ BASE = ../..
 OBJS = main.o plane.o
 
 PCL = 1
-DEPEND = Core System Hardware_kinect Perception Gui Ors
+ROS = 1
+DEPEND = Core System Hardware_kinect Perception Gui Ors pr2
 LIBS += -lboost_system
 
 include $(BASE)/gofMake/generic.mk
