--- a/share/examples/Hardware/kinect/CMakeLists.txt
+++ b/share/examples/Hardware/kinect/CMakeLists.txt
@@ -8,7 +8,7 @@ if(LIBFREENECT_FOUND)
 	include(.sources.cmake)
 	add_executable(x_${NAME} ${SOURCES})
 	
-	target_link_libraries(x_${NAME} Hardware_kinect Gui)
+	target_link_libraries(x_${NAME} Hardware_kinect Gui Core)
 	
 	mlr_example_test(${NAME})
 
