display data structures

--- a/share/projects/pcl_sprint_module/Makefile.gof
+++ b/share/projects/pcl_sprint_module/Makefile.gof
@@ -1,9 +1,10 @@
 BASE = ../..
 
-OBJS = main.o methods.o
+OBJS = main.o methods.o dataStructures.o
 
 PCL = 1
 ROS = 1
+GL = 1
 DEPEND = Core System Hardware_kinect Perception Gui Ors pr2
 LIBS += -lboost_system
 
